

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <!-- 增加 -->

    <Button
        android:id="@+id/btn_insert"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_insert" />

    <!-- 删除 -->

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_insert"
        android:text="@string/btn_delete" />

    <!-- 修改 -->

    <Button
        android:id="@+id/btn_update"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_delete"
        android:text="@string/btn_update" />

    <!-- 查询 -->

    <Button
        android:id="@+id/btn_query"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_update"
        android:text="@string/btn_query" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_query"
        android:text="@string/btn_camera"       />

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_camera"
        android:onClick="broadcast"
        android:text="@string/btn_broadcast" />

    <!-- 展现查询的数据-->
    <ListView
        android:id="@+id/list_data"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_camera" />

</RelativeLayout>
