<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowColor"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp">

    <com.zl.tesseract.scanner.more.RoundImageView
        android:id="@+id/user_msg_pic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/s0"/>

    <TextView
        android:id="@+id/user_msg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="罗玲玲"
        android:textColor="@color/greenGrayColor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/user_msg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="20180330401"
        android:textColor="@color/greenGrayColor"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/greenGrayColor"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/school"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/user_msg_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="中南光明小学"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_class"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="三年二班"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="13267085628"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_age"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="9"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_sex"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="女"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_edit_msg"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/edit_message"
            android:textSize="16sp"
            android:textColor="@color/deepGreenColor"
            android:layout_gravity="right|center"/>
        <Button
            android:id="@+id/btn_edit_psw"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:background="@drawable/btn_refuse_shape"
            android:text="@string/edit_psw"
            android:textSize="16sp"
            android:textColor="@color/windowColor"
            android:layout_gravity="right|center"/>
    </LinearLayout>
</LinearLayout>