<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowColor"
    android:paddingLeft="30dp"
    android:paddingTop="20dp"
    android:paddingRight="30dp">

    <com.zl.tesseract.scanner.more.RoundImageView
        android:id="@+id/user_msg_pic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/img"/>

    <TextView
        android:id="@+id/user_msg_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="苇苇"
        android:textColor="@color/greenGrayColor"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/user_msg_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="201804230956"
        android:textColor="@color/greenGrayColor"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/greenGrayColor"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/school"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/user_msg_school"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="中南光明小学"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_class"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="三年一班"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="13277089625"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_age"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="9"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_sex"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/user_msg_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="女"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/studenr_msg_btn"
        android:layout_width="220dp"
        android:layout_height="46dp"
        android:background="@drawable/button_shape"
        android:text="@string/check_grade"
        android:textSize="18sp"
        android:textColor="@color/deepGreenColor"
        android:layout_gravity="center"/>
</LinearLayout>