<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/windowColor">
    <android.support.v7.widget.Toolbar
        android:id="@+id/add_paper_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:elevation="3dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/back_two" />
        <TextView
            android:id="@+id/txt_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="添加学生"
            android:textColor="@color/deepGreenColor"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <com.zl.tesseract.scanner.more.RoundImageView
        android:id="@+id/user_msg_pic"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginTop="25dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:src="@mipmap/img"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/student_name"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/user_student__name"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生姓名"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="35dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/school"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/user_school_name"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生学校"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_class"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/user_class_name"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生班级"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/phone"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/user_student_tel"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生手机号"
            android:inputType="number"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_age"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/user_student_age"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生年龄"
            android:inputType="number"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_sex"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/user_student_sex"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="选择学生性别"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="35dp"
        android:paddingRight="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/msg_account"
            android:textColor="@color/greenGrayColor"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/user_student_account"
            android:layout_width="250dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:hint="输入学生学号"
            android:inputType="number"
            android:textColorHint="@color/frameGray"
            android:paddingLeft="15dp"
            android:textColor="@color/greenGrayColor"
            android:textSize="16sp"
            android:background="@drawable/edit_text_rounded"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="30dp">
        <Button
            android:id="@+id/btn_save_student"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/save"
            android:textSize="16sp"
            android:textColor="@color/deepGreenColor"
            android:layout_gravity="right|center"/>
        <Button
            android:id="@+id/btn_cancel_student"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:background="@drawable/btn_refuse_shape"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="@color/windowColor"
            android:layout_gravity="right|center"/>
    </LinearLayout>

</LinearLayout>