<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/windowColor">
    <android.support.v7.widget.Toolbar
        android:id="@+id/edit_psw_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d4f2ae"
        android:elevation="3dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">
        <TextView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:paddingRight="20dp"
            android:drawableRight="@mipmap/back_two" />
        <TextView
            android:id="@+id/txt_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="修改密码"
            android:textColor="@color/deepGreenColor"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/old_psw"
                android:textColor="@color/greenGrayColor"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/edit_psw_old"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="输入原密码"
                android:textColor="@color/blackText"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textAppearance="@android:style/TextAppearance"
                android:textColorHint="@color/frameGray" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/new_psw"
                android:textColor="@color/greenGrayColor"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit_psw_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="输入新密码"
                android:inputType="textPassword"
                android:textColorHint="@color/frameGray"
                android:textColor="@color/greenGrayColor"
                android:textSize="16sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_psw"
                android:textColor="@color/greenGrayColor"
                android:textSize="16sp"/>
            <EditText
                android:id="@+id/edit_psw_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="再次输入新密码"
                android:inputType="textPassword"
                android:textColorHint="@color/frameGray"
                android:textColor="@color/greenGrayColor"
                android:textSize="16sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp">
            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:text="@string/save"
                android:textSize="16sp"
                android:textColor="@color/deepGreenColor"
                android:layout_gravity="right|center"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:layout_marginLeft="12dp"
                android:background="@drawable/btn_refuse_shape"
                android:text="@string/cancel"
                android:textSize="16sp"
                android:textColor="@color/windowColor"
                android:layout_gravity="right|center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>